feat: Remove some tooltips

--- a/src/content/home/our-philosophy.mdx
+++ b/src/content/home/our-philosophy.mdx
@@ -4,4 +4,4 @@ hide_table_of_contents: true
 
 import { TooltipWrapper } from '@site/src/components';
 
-We’re building open <TooltipWrapper trigger="protocols">basic sets of rules that allow data to be shared between computers</TooltipWrapper>, <TooltipWrapper trigger="standards">Specifications developed by a group of experts in a standards body like the Decentralized Identity Foundation (DIF) or World Wide Web Consortium (W3C)</TooltipWrapper>, and development communities. Our projects are open source because we want everyone in the economy to benefit: individuals, businesses, institutions, and government. Read our open source philosophy.
+We’re building open protocols, standards, and development communities. Our projects are open source because we want everyone in the economy to benefit: individuals, businesses, institutions, and government. Read our open source philosophy.
