--- a/src/content/open-source/pillars-inclusivity.mdx
+++ b/src/content/open-source/pillars-inclusivity.mdx
@@ -5,5 +5,5 @@ hide_table_of_contents: true
 import { TooltipWrapper } from '@site/src/components';
 
 Anyone with the capacity to contribute: can. We are proactive in welcoming a diverse contributor base for our code,
-documentation, developer relations, education, and communication efforts. Bad actors will be met with a published <TooltipWrapper trigger="governance model"> describes the roles that project participants can take on and the process for decision making within the project </TooltipWrapper> and enforced <TooltipWrapper trigger="code of conduct"> lays out tprinciples, standards, and the moral and ethical expectations </TooltipWrapper>. Our users deserve representation in our development communities, and we promote
+documentation, developer relations, education, and communication efforts. Bad actors will be met with a published governance model and enforced code of conduct. Our users deserve representation in our development communities, and we promote
 varied perspectives and respectful debate.
