--- a/src/content/projects/ssi-service.mdx
+++ b/src/content/projects/ssi-service.mdx
@@ -4,4 +4,4 @@ hide_table_of_contents: true
 
 import { TooltipWrapper } from '@site/src/components';
 
-Standards-based <TooltipWrapper trigger="primitives">Code building blocks (APIs) that applications may use for common Self Sovereign Identity tasks</TooltipWrapper> for using <TooltipWrapper trigger="Decentralized Identifiers"> identity created, owned, and controlled by individuals, without reliance on centralized entities </TooltipWrapper> and <TooltipWrapper trigger="Verifiable Credentials">digital certificates that make it easy to share information online in a private and secure way</TooltipWrapper>.
+Standards-based primitives for using <TooltipWrapper trigger="Decentralized Identifiers"> identity created, owned, and controlled by individuals, without reliance on centralized entities </TooltipWrapper> and <TooltipWrapper trigger="Verifiable Credentials">digital certificates that make it easy to share information online in a private and secure way</TooltipWrapper>.
