--- a/src/content/home/our-approach.mdx
+++ b/src/content/home/our-approach.mdx
@@ -4,16 +4,5 @@ hide_table_of_contents: true
 
 import { TooltipWrapper } from '@site/src/components';
 
-<TooltipWrapper trigger="Decentralized">
-  a network that is not controlled by a central entity
-</TooltipWrapper>
-. <TooltipWrapper trigger="Permissionless">
-  the ability to participate in a network without the need for application or
-  approval
-</TooltipWrapper>
-. <TooltipWrapper trigger="Trustless">
-  trust is established in a decentralized way, for example via decentralized
-  identity and verifiable credentials
-</TooltipWrapper>
-. This is the paradigm shift evolving the web forward. Discover the concepts behind
+Decentralized. <TooltipWrapper trigger="Permissionless"> the ability to participate in a network without the need for application or approval</TooltipWrapper>. <TooltipWrapper trigger="Trustless"> trust is established in a decentralized way, for example via decentralized identity and verifiable credentials</TooltipWrapper>. This is the paradigm shift evolving the web forward. Discover the concepts behind
 our approach.
