fix: Add syntax highlight and highlight one code section

--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -48,26 +48,30 @@ That being said, anchoring DIDs on Bitcoin (or any blockchain) is not a requirem
 
 Here are examples of DIDs on the Bitcoin blockchain, the Ethereum blockchain, and the web. Notice they all use the same format: scheme, DID method, and DID method-specific identifier.
 
-    did:btcr:xyv2-xzpq-q9wa-p7t
-    did:ens:some.eth
-    did:web:example.com
+```json
+did: btcr: xyv2 - xzpq - q9wa - p7t;
+did: ens: some.eth;
+did: web: example.com;
+```
 
 Because personal data is not stored on the blockchain, the DID essentially acts as a URI that associates the subject of the DID (the person, company, or object being identified) with a DID document that lives off-chain.
 
-DID Documents are JSON files stored in decentralized storage systems such as IPFS, and describe how to interact with the DID subject. The DID Document contains things like the DID subject's public keys, authentication and verification methods, and service endpoints that reference the locations of the subject’s data..
+DID Documents are JSON files stored in decentralized storage systems such as IPFS, and describe how to interact with the DID subject. The DID Document contains things like the DID subject's public keys, authentication and verification methods, and service endpoints that reference the locations of the subject’s data.
 
+```json
+{
+  "@context": "https://www.w3.org/ns/did/v1",
+  "id": "did:ion:EiClkZMDxPKqC9c-umQfTkR8",
+  "verificationMethod": [
     {
-      "@context": "https://www.w3.org/ns/did/v1",
       "id": "did:ion:EiClkZMDxPKqC9c-umQfTkR8",
-      "verificationMethod": [{
-        "id": "did:ion:EiClkZMDxPKqC9c-umQfTkR8",
-        "type": "Secp256k1VerificationKey2018",
-        "controller": "did:ion:EiClkZMDxPKqC9c-umQfTkR8",
-      }],
-      "authentication": [
-        "did:ion:EiClkZMDxPKqC9c-umQfTkR8"
-      ]
+      "type": "Secp256k1VerificationKey2018",
+      "controller": "did:ion:EiClkZMDxPKqC9c-umQfTkR8"
     }
+  ],
+  "authentication": ["did:ion:EiClkZMDxPKqC9c-umQfTkR8"]
+}
+```
 
 ## Verifiable Credentials
 
@@ -103,31 +107,37 @@ Your DWNs are associated with your Decentralized Identifiers and are listed in a
 
 Notice the `serviceEndpoint` section of the DID doc specifies service endpoints and provides URIs to the decentralized web nodes.
 
+```json
+{
+  "@context": "https://www.w3.org/ns/did/v1",
+  "id": "did:web:example.com:u:alice",
+  "service": [
     {
-      "@context": "https://www.w3.org/ns/did/v1",
-      "id": "did:web:example.com:u:alice",
-      "service": [{
-        "id":"#dwn",
-        "type": "DecentralizedWebNode",
-        "serviceEndpoint": {
-          "nodes": ["https://dwn.example.com",
-                    "00:11:22:33:FF:EE"]
-        }
-      }],
-      "verificationMethod": [{
-        "id": "did:web:example.com:u:alice",
-        "type": "Secp256k1VerificationKey2018",
-        "controller": "did:web:example.com:u:alice",
-      }],
-      "authentication": [
-        "did:web:example.com:u:alice"
-      ]
+      "id": "#dwn",
+      "type": "DecentralizedWebNode",
+      //highlight-start
+      "serviceEndpoint": {
+        "nodes": ["https://dwn.example.com", "00:11:22:33:FF:EE"]
+      }
+      //highlight-end
     }
+  ],
+  "verificationMethod": [
+    {
+      "id": "did:web:example.com:u:alice",
+      "type": "Secp256k1VerificationKey2018",
+      "controller": "did:web:example.com:u:alice"
+    }
+  ],
+  "authentication": ["did:web:example.com:u:alice"]
+}
+```
 
 Given an application has the address to your DWN, they can send you a request for data.
 
 This represents a request from an application to obtain all objects within a DWN that follow the `SocialMediaPosting` schema:
 
+```json
     POST https://dwn.example.com/
     BODY {
       "requestId": "c5784162-84af-4aab-aff5-f1f8438dfc3d",
@@ -142,6 +152,7 @@ This represents a request from an application to obtain all objects within a DWN
         {...}
       ]
     }
+```
 
 The data within DWNs are JSON objects that follow a universal standard, thus making it possible for any application to discover and process the data given its semantic type.
 
