--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -16,13 +16,13 @@ In the current web model, users do not own their data or identity. They are give
 
 This platform embraces the convenience of Web 2 but it also returns control back to the users, an ethos of Web 3. The harmony of these two views is what we're calling Web 5.
 
-![](/img/web5-graphic.png)
+![{Web 2}{Web 3} -> {Web 5}](/img/web5-graphic.png)
 
 ## Components of Web 5
 
 There are three main pillars of the decentralized web platform, all of which are based on open standards.
 
-![](/img/pillars-of-web5.png)
+![The pillars of Web5 are Decentralized Identifiers (self-owned identifiers that enable decentralized identity authentication and routing), Verifiable Credentials (data formats and models for cryptographic presentation and verification of claims), and Decentralized Web Nodes (data storage and message relay nodes that serve as the foundation for decentralized apps and protocols).](/img/pillars-of-web5.png)
 
 ## Decentralized Identifiers
 
@@ -32,7 +32,7 @@ So before we can realize truly decentralized applications, we need decentralized
 
 ​​[Decentralized Identifiers](https://www.w3.org/TR/did-core/) (DIDs) are a W3C proposed recommendation with a standardized structure that essentially links to you and your information.
 
-![](/img/did-example.png)
+![A DID is comprised of three parts: Scheme, DID Method, and DID Method Specific String](/img/did-example.png)
 
 They are a long string of text that consists of three parts:
 
@@ -79,7 +79,7 @@ DID Documents are JSON files stored in decentralized storage systems such as IPF
 
 For example, Alice needs to prove she has a bank account at Acme Bank. Acme Bank issues a cryptographically signed Verifiable Credential which would be stored in Alice's identity wallet.
 
-![](/img/acme-bank-example.png)
+![Illustration of Acme Bank issuing a verifiable credential to Alice’s wallet, and the wallet presenting the credential as proof of a bank account to a PFI Verifier.](/img/acme-bank-example.png)
 
 The credential contains the issuer as Acme and the subject as Alice, as well as the claims, which are Alice's account number and full name.
 
@@ -99,7 +99,7 @@ Your DWNs can hold both public and encrypted data. For example, in the case of a
 
 **Your decentralized web nodes do not live on the blockchain**. You can host your web nodes anywhere (your phone, computer, etc) and can replicate them across your devices and clouds and all data will be synced.
 
-![](/img/features-graphic.png)
+![Decentralized Web Nodes is an emerging standard for data storage and relay that enables entities of any type (people, organizations, etc) to send and store encrypted or public messages and data, enabling a wide variety of decentralized apps and protocols to be built on top. Features of Decentralized Web Nodes include: universally addressable, replicated, secure, semantic discovery, async message threads, supports any identity type.](/img/features-graphic.png)
 
 While self-hosting your DWNs provides a means for decentralizing your data, we recognize some users will be more comfortable with others hosting their web nodes for convenience sake. We envision there will be vendors offering to host your web nodes for you. The good part about that is you can encrypt any private data so unlike today where cloud hosts can scan everything that you host there, you can still maintain some privacy even if you have your web nodes hosted by intermediaries.
 
@@ -164,7 +164,7 @@ Obviously all of this is pretty complicated, especially for non-technical users.
 
 A well designed identity wallet would provide ways to manage the data stored in decentralized web nodes, the decentralized IDs and the context in which they should be used, verifiable credentials, and authorizations.
 
-![](/img/identity-wallets.png)
+![Identity wallets are mobile apps that provide UI and functionality to manage credentials and app data stored in Decentralized Web Nodes; sign, verify, discover, and present credentials to verifying parties; perform authentication and manage authorizations; support create, update, and recovery of DIDs across all supported DID Methods; maintain and enforce which DIDs are used with different people, apps, and services.](/img/identity-wallets.png)
 
 ## Decentralized Web Apps
 
@@ -172,7 +172,7 @@ Web 5 enables developers to build decentralized web applications (DWAs) on top o
 
 This is definitely a fundamental change in how we exchange data, but it's not a total overhaul of the web we already know. This works like Progressive Web Apps, but you'd add the decentralized web node SDK and then applications are free to really go serverless because the data isn't stored with them.
 
-![](/img/pwa-dwa.png)
+![Illustration of PWAs compared to DWAs. PWAs comprise of a web app that uses a service worker to pull from local cache and a centralized app server; whereas DWAs comprise of a DWN SDK and a service worker that pull from local cache and Decentralized Web Nodes.](/img/pwa-dwa.png)
 
 The sky's the limit to what you can build on top of this platform, but here are some cool basic examples.
 
@@ -184,7 +184,7 @@ In this example, Groove has access to write to Alice's decentralized web node an
 
 Tidal has access to read from Alice's DWN, so can read the new entry that was added by Groove, and now Alice has her playlist readily available on both apps.
 
-![](/img/music-to-my-ears.png)
+![Illustration of Groove writing a new schema.org/MusicPlaylist object to Alice’s remote DWN and Tidal, who has read ability, reading the MusicPlaylist entry that Groove added.](/img/music-to-my-ears.png)
 
 With the continuous utilization of the data across apps, not only do Groove and Tidal get access to Alice's data, but they use it to improve her user experience, thus creating a stronger experience than Alice could have ever gotten had she not used this tech.
 
@@ -196,7 +196,7 @@ Web 5 can help unify these various app experiences.
 
 If Alice gives the hotel, the airline, and the rental car agency access to the `Reservation` and `Trip` objects in her DWN, they can react and adjust accordingly to any changes made.
 
-![](/img/hotel-travel-plans.png)
+![Illustration: Alice grants her hotel, airline, and rental car provider the ability to add schema.org/Reservation objects to her collection of trip-related data and also grants any app she chooses access to reservations and tickets stored in her schema.org/Trip data to help her visualize her itinerary.](/img/hotel-travel-plans.png)
 
 These are just a few applications that can be realized by building on top of Web 5. There's so many more possibilities once the web is truly decentralized the way it was always intended to be.
 
