fix: Change read more size on blog, Change width of blog on mobile
Add alt text to first image on blog post

--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -6,7 +6,7 @@ authors:
 tags: [Web5]
 ---
 
-![](/img/what_is_web5.png)
+![What is Web5?](/img/what_is_web5.png)
 
 Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols.
 
