fix: updating Mike's title

--- a/learn/discussions/blockchain-crypto-tbd.mdx
+++ b/learn/discussions/blockchain-crypto-tbd.mdx
@@ -30,7 +30,7 @@ An open discussion about blockchain, bitcoin, web3, and decentralization with TB
     {
       imageUrl: '/img/learn/headshots/mike_brock.jpeg',
       headline: 'Mike Brock',
-      description: 'TBD of TBD',
+      description: 'TBD Lead',
       twitterLink: 'https://twitter.com/brockm',
     },
   ]}
