--- a/src/pages/open-source.mdx
+++ b/src/pages/open-source.mdx
@@ -4,14 +4,8 @@ hide_table_of_contents: true
 
 import metacontent from '@site/src/content/global-meta';
 import { content } from '@site/src/content/open-source/open-source';
-import {
-  Divider,
-  ButtonGroup,
-  Button,
-  PillarList,
-  HighlightsEmbedGrid,
-  TooltipWrapper,
-} from '@site/src/components';
+import Heading from '@site/src/content/open-source/heading.mdx';
+import Governance from '@site/src/content/open-source/governance.mdx';
 
 <head>
   <title>{content.meta.title}</title>
@@ -30,11 +24,7 @@ import {
 
 <div className="prose prose-pink">
 
-# Today’s financial systems leave people behind. We build systems for anyone with internet access. And we’re creating it like the web itself: as a public good.
-
-Our projects are open source and, where appropriate, built on open standards.
-
-Our work is licensed under the Apache License 2.0, and we welcome you to join us in building the future of finance and <TooltipWrapper trigger="decentralized">a network that is not controlled by a central entity</TooltipWrapper> technology.
+<Heading />
 
 <Divider type="slash" />
 
@@ -42,9 +32,6 @@ Our work is licensed under the Apache License 2.0, and we welcome you to join us
 
 <Divider type="slash" />
 
-# Governance
+<Governance />
 
-Great work is built by great people with great relationships. Our governance model protects the community from behavior that doesn’t reflect our values.
-
-<ButtonGroup buttons={content.buttons} />
 </div>
