--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -3,12 +3,7 @@ hide_table_of_contents: true
 ---
 
 import metacontent from '@site/src/content/global-meta';
-import {
-  TwoColumnContainer,
-  ProjectList,
-  TooltipWrapper,
-} from '@site/src/components';
-import { content } from '@site/src/content/projects';
+import { content } from '@site/src/content/projects/project-index/projects';
 
 <head>
   <title>{content.meta.title}</title>
@@ -27,13 +22,9 @@ import { content } from '@site/src/content/projects';
 
 <div className="prose prose-pink mb-13.5">
 
-# The future is TBD.
+<content.Heading />
 
-# Join us in shaping it.
-
-## List of Projects
-
-<ProjectList projects={content.projects} growToFit={false} title="" />
+<content.ListOfProjects />
 
 ---
 
@@ -43,29 +34,13 @@ import { content } from '@site/src/content/projects';
 
 <div className="prose prose-pink">
 
-# All projects in the TBD family are in early prototyping.
-
-## New contributors should expect a pace of development consistent with nascent technology: larger commits, frequent refactoring, changing APIs, and incomplete feature sets.
+<content.Column1 />
 
 </div>
 
 <div className="prose prose-pink">
 
-**We believe open source is not a publishing medium.**
-
-These projects are open from the start to welcome your interest, invite discussion, identify early issues, and advise on design.
-
-An early adopter mindset will work well until these projects mature further.
-
-The Discussion Forums and Issue Trackers are likely the best way to get involved now. Our project leads may be able to guide your efforts and incorporate your feedback in ways that will be most meaningful to you and the project's goals.
-
-In particular, we want to ensure the New Contributor Experience is as smooth as possible. You should be able to:
-
-- Understand each project's goals and scope
-- Install prerequisite dependencies
-- Clone and build the project
-- Run the tests
-- Join the conversation in Discussions and Issues
+<content.Column2 />
 
 </div>
 
