--- a/learn/discussions/history-of-blockchains.mdx
+++ b/learn/discussions/history-of-blockchains.mdx
@@ -9,7 +9,7 @@ sidebar_custom_props:
   thumbnail: /img/learn/history_of_blockchains.png
 ---
 
-import { Divider, Audio, BiographyList } from '@site/src/components';
+import { Audio, BiographyList } from '@site/src/components';
 
 <div className="mb-8">
   <Audio url="https://soundcloud.com/user-625850228/history-of-blockchain-with" />
