--- a/learn/discussions/realities-working-blockchain.mdx
+++ b/learn/discussions/realities-working-blockchain.mdx
@@ -9,7 +9,7 @@ sidebar_custom_props:
   thumbnail: /img/learn/nader_dabit_banner.png
 ---
 
-import { Divider, Audio, BiographyList } from '@site/src/components';
+import { Audio, BiographyList } from '@site/src/components';
 
 <div className="mb-8">
   <Audio url="https://soundcloud.com/user-625850228/realities-of-working-on" />
