--- a/learn/discussions/web5-ask-me-anything.mdx
+++ b/learn/discussions/web5-ask-me-anything.mdx
@@ -10,7 +10,7 @@ sidebar_custom_props:
   thumbnail: /img/learn/web5_ama_banner.png
 ---
 
-import { Divider, Audio, BiographyList } from '@site/src/components';
+import { Audio, BiographyList } from '@site/src/components';
 
 <div className="mb-8">
   <Audio
