--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -6,6 +6,12 @@ authors:
 tags: [Web5]
 ---
 
+<head>
+  <meta property="og:title" content="What is Web5? | TBD" />
+  <meta property="og:url" content='https://developer.tbd.website/blog/2022-07-01-what-is-web5' />
+  <link rel="apple-touch-icon" href="https://developer.tbd.website/img/tbd-fav-icon-main.png" />
+</head>
+
 ![What is Web5?](/img/what_is_web5.png)
 
 Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols.
