--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -1,9 +1,11 @@
 ---
 slug: what-is-web5
 title: What is Web5?
+description: Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols.
+image: https://developer.tbd.website/assets/images/what_is_web5.png
 authors:
   name: Angie Jones
-tags: [Web5]
+tags: [web5]
 ---
 
 <head>
