fixing formatting of DID examples

--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -62,9 +62,9 @@ That being said, anchoring DIDs on Bitcoin (or any blockchain) is not a requirem
 Here are examples of DIDs on the Bitcoin blockchain, the Ethereum blockchain, and the web. Notice they all use the same format: scheme, DID method, and DID method-specific identifier.
 
 ```json
-did: btcr: xyv2 - xzpq - q9wa - p7t;
-did: ens: some.eth;
-did: web: example.com;
+did:btcr:xyv2-xzpq-q9wa-p7t
+did:ens:some.eth
+did:web:example.com
 ```
 
 Because personal data is not stored on the blockchain, the DID essentially acts as a URI that associates the subject of the DID (the person, company, or object being identified) with a DID document that lives off-chain.
