fix twitter summary tag

--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -11,7 +11,7 @@ tags: [web5]
 <head>
   <meta property="og:title" content="What is Web5?" />
   <meta property="og:url" content='https://developer.tbd.website/blog/2022-07-01-what-is-web5' />
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@tbddev" />
   <meta name="twitter:title" content="What is Web5" />
   <meta name="twitter:description" content="Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols." />
