updating headers for SSI blog post (#274)

--- a/blog/2022-08-26-ssi-tbd-web5.md
+++ b/blog/2022-08-26-ssi-tbd-web5.md
@@ -34,6 +34,8 @@ tags: [Self Sovereign Identity, Web5]
 
 Self Sovereign Identity (SSI) is an umbrella term well-detailed by Christopher Allen, and inspired by many in the Identity community before him, in his 2016 blog post: [*The Path to Self-Sovereign Identity*](http://www.lifewithalacrity.com/2016/04/the-path-to-self-soverereign-identity.html), which identifies *Ten Principles of Self-Sovereign Identity:*
 
+<!--truncate-->
+
 1. **Existence.** *Users must have an independent existence.*
 2. **Control.** *Users must control their identities.*
 3. **Access.** *Users must have access to their own data.*
@@ -45,7 +47,7 @@ Self Sovereign Identity (SSI) is an umbrella term well-detailed by Christopher A
 9. **Minimalization.** *Disclosure of claims must be minimized.*
 10. **Protection.** *The rights of users must be protected.*
 
-<!--truncate-->
+
 
 Since 2016, a lot has happened! There have been a flurry of conventions, discussions, papers, standards, software, and industry wide adoption of technology based on the principles of SSI. The space is at its most mature, and only growing.
 
@@ -55,11 +57,11 @@ To facilitate our mission, TBD launched [Web5](https://developer.tbd.website/blo
 
 Here we’ll lay out the vision for a key component of Web5: Self Sovereign Identity. Specifically, how we at TBD are building standards based software in a community towards the goals of SSI and Web5. The two “SSI” named projects — the SSI Service and SSI SDK — sit along side Decentralized Web Nodes, Identity Wallets, User Interfaces, and much more — but focus on a set of standards-based building blocks of the Web5 stack.
 
-# Software Mission
+## Software Mission
 
 **TBD is developing open source, standards-based software to facilitate Self Sovereign Identity on Web5.**
 
-## Open Standards
+### Open Standards
 
 The vision of SSI is realized via [Open Standards](https://en.wikipedia.org/wiki/Open_standard#:~:text=%22Open%20Standards%22%20are%20standards%20made,are%20intended%20for%20widespread%20adoption.). Crucially, these standards are accessible to all: to view and to contribute. You may not be aware of it, but you interact with Open Standards every day: whether via the web browsers, the hardware you use and their underlying protocols, programming languages, audio files, internet and bluetooth devices, text documents, chat applications, encryption you use and so much more. Open Standards facilitate nearly every aspect of modern computation.
 
@@ -121,7 +123,7 @@ Projects in the TBD GitHub may originate at TBD, or through the community (on ou
 
 This transition is only made possible by active engagement from the community. It is the reason our code is open, and we have set up avenues for engagement. We look towards the community to engage with TBD and others, and push for the future we wish to see built.
 
-# Software Vision
+## Software Vision
 
 **TBD is fostering a set of community-driven, open source, standards-based software to facilitate Self Sovereign Identity on Web5.**
 
@@ -151,7 +153,7 @@ The service is assumed to be run by a single organization and assumes external a
 
 The service is an active work in progress, and can be found on the [TBD GItHub](https://github.com/TBD54566975/ssi-service).
 
-# How Features are Developed
+## How Features are Developed
 
 We are in the early days of Web5. By intention, we’ve announced our ideas and projects way before they are ready for an alpha release, let alone inclusion in a production-ready application. Transparency is an asset in sharing our thinking and gaining mindshare for what we are building. As such, there are many forks in the road fast-approaching. To move past these forks, and the forks after those I introduce some light process to guide principled decision making:
 
@@ -165,7 +167,7 @@ For templates on feature development, philosophies on versioning and releases, a
 
 [SSI Service GitHub Docs](https://github.com/TBD54566975/ssi-service) | [SSI SDK GitHub Docs](https://github.com/TBD54566975/ssi-sdk)
 
-# The Goal
+## The Goal
 
 I believe in setting public and ambitious *measurable* goals. This serves as a powerful self-discipline mechanism, as well as a call to action for forward progress. Officially the [timeline for Web5 can be found on our site](https://developer.tbd.website/blog/web5-roadmap). Unofficially, here is my ambition:
 
@@ -185,6 +187,6 @@ I believe in setting public and ambitious *measurable* goals. This serves as a p
     - Creating and processing Trust Establishment documents
 - The SSI SDK and Service will support the Decentralized Web Node specification and the Service will work with at least one DWN.
 
-# Parting Thoughts
+## Parting Thoughts
 
 You should now have a pretty good sense of how we conceive of SSI software on Web5, and how its journey will unfold. Most importantly the mission is not TBD’s alone, it is that of the community. We build real software for real people and favor pragmatism above all else. What I’ve written here is *current thinking* and is always subject to evolution—with your help. I’m looking forward to you joining us in pushing SSI and Web5 forward, gaining new perspectives, solving new use-cases, and building some cool shit.
