adding links to table for blog post #274

--- a/blog/2022-08-26-ssi-tbd-web5.md
+++ b/blog/2022-08-26-ssi-tbd-web5.md
@@ -85,21 +85,21 @@ The set of standards we rely on and use for Web5 is unbound. However, we have a 
 
 | Specification | Standards Body | Description | Status |
 | --- | --- | --- | --- |
-| DID Core | W3C Decentralized Identifier Working Group | Decentralized Identifiers v1.0. | Recommendation |
-| DID ION | DIF Sidetree | A layer 2 Decentralized Identifier network that runs atop the Bitcion blockchain, built on the Sidetree protocol. | Ratified Specification |
-| DID Key | W3C CCG | A simple method to create a DID using a single cryptographic key. | Unofficial Draft |
-| DID Web | W3C CCG | A DID method that allows bootstrapping trust using a web domain. | W3C Internal Document |
-| DID Peer | DIF Identifiers & Discovery | A DID method that can be used independent of any central source of truth, intended to be “cheap, fast, scalable, and secure.” | Draft |
-| Verifiable Credentials Data Model | W3C Verifiable Credentials Working Group | The Verifiable Credentials Data Model v1.1. | Recommendation |
-| Data Integrity | W3C Verifiable Credentials Working Group | Describes mechanisms for ensuring the authenticity and integrity of structured digital documents…such as digital signatures. | Editor’s Draft |
-| JSON Web Signature 2020 | W3C Verifiable Credentials Working Group | A cryptographic suite for the purpose of creating and verifying proofs for JSON Web Signatures using Linked Data Proofs. | Editor’s Draft |
-| Verifiable Credentials JSON Schema | W3C CCG | A mechanism to use JSON schemas to back a Verifiable Credential.  | Draft |
-| Status List 2021 | W3C CCG | A privacy-preserving, space-efficient, and high-performance mechanism for publishing status information such as suspension or revocation of Verifiable Credentials. | Draft Community Group Report |
-| VC Proof Format Test Suite | DIF Claims & Credentials | A test suite providing interoperability testing and reporting for Verifiable Credentials and Presentation for Linked Data and JWT signature types. | Unofficial Draft |
-| Presentation Exchange | DIF Claims & Credentials | A claim format and transport envelope agnostic format for Verifiers to articulate proof requirements, and for Holders to describe proofs according to those requirements. | Working Group Draft |
-| Credential Manifest | DIF Claims & Credentials | A common data format for describing the inputs a Subject must provide to an Issuer for evaluation and issuance of credentials, a means for a Subject to submit an application against those requirements, and a means for an Issuer to fulfill such an application. | Pre-Draft |
-| Trust Establishment | DIF Claims & Credentials | A means of communicating trust statements and relations between parties in decentralized identity environments. | Pre-Draft |
-| Decentralized Web Node | DIF Secure Data Storage | A DWN is a data storage and message relay mechanism entities can use to locate public or private permissioned data related to a given DID. DWNs provide multi-node sync, enabling the owning entity to secure, manage, and transact their data with others without centralizing factors. | Draft |
+| [DID Core](https://www.w3.org/TR/did-core/) | [W3C Decentralized Identifier Working Group](https://www.w3.org/groups/wg/did) | Decentralized Identifiers v1.0. | Recommendation |
+| [DID ION](https://identity.foundation/ion/) | [DIF Sidetree](https://identity.foundation/working-groups/sidetree.html) | A layer 2 Decentralized Identifier network that runs atop the Bitcion blockchain, built on the Sidetree protocol. | Ratified Specification |
+| [DID Key](https://w3c-ccg.github.io/did-method-key/) | [W3C CCG](https://www.w3.org/community/credentials/) | A simple method to create a DID using a single cryptographic key. | Unofficial Draft |
+| [DID Web](https://w3c-ccg.github.io/did-method-web/) | [W3C CCG](https://www.w3.org/community/credentials/) | A DID method that allows bootstrapping trust using a web domain. | W3C Internal Document |
+| [DID Peer](https://identity.foundation/peer-did-method-spec/) | [DIF Identifiers & Discovery](https://identity.foundation/working-groups/identifiers-discovery.html) | A DID method that can be used independent of any central source of truth, intended to be “cheap, fast, scalable, and secure.” | Draft |
+| [Verifiable Credentials Data Model](https://www.w3.org/TR/vc-data-model/) | [W3C Verifiable Credentials Working Group](https://www.w3.org/groups/wg/vc) | The Verifiable Credentials Data Model v1.1. | Recommendation |
+| [Data Integrity](https://github.com/w3c/vc-data-integrity) | [W3C Verifiable Credentials Working Group](https://www.w3.org/groups/wg/vc) | Describes mechanisms for ensuring the authenticity and integrity of structured digital documents…such as digital signatures. | Editor’s Draft |
+| [JSON Web Signature 2020](https://w3c.github.io/vc-jws-2020/) | [W3C Verifiable Credentials Working Group](https://www.w3.org/groups/wg/vc) | A cryptographic suite for the purpose of creating and verifying proofs for JSON Web Signatures using Linked Data Proofs. | Editor’s Draft |
+| [Verifiable Credentials JSON Schema](https://w3c-ccg.github.io/vc-json-schemas/v2/index.html) | [W3C CCG](https://www.w3.org/community/credentials/) | A mechanism to use JSON schemas to back a Verifiable Credential.  | Draft |
+| [Status List 2021](https://w3c-ccg.github.io/vc-status-list-2021/) | [W3C CCG](https://www.w3.org/community/credentials/) | A privacy-preserving, space-efficient, and high-performance mechanism for publishing status information such as suspension or revocation of Verifiable Credentials. | Draft Community Group Report |
+| [VC Proof Format Test Suite](https://identity.foundation/JWS-Test-Suite/) | [DIF Claims & Credentials](https://identity.foundation/working-groups/claims-credentials.html) | A test suite providing interoperability testing and reporting for Verifiable Credentials and Presentation for Linked Data and JWT signature types. | Unofficial Draft |
+| [Presentation Exchange](https://identity.foundation/presentation-exchange/) | [DIF Claims & Credentials](https://identity.foundation/working-groups/claims-credentials.html) | A claim format and transport envelope agnostic format for Verifiers to articulate proof requirements, and for Holders to describe proofs according to those requirements. | Working Group Draft |
+| [Credential Manifest](https://identity.foundation/credential-manifest/) | [DIF Claims & Credentials](https://identity.foundation/working-groups/claims-credentials.html) | A common data format for describing the inputs a Subject must provide to an Issuer for evaluation and issuance of credentials, a means for a Subject to submit an application against those requirements, and a means for an Issuer to fulfill such an application. | Pre-Draft |
+| [Trust Establishment](https://identity.foundation/trust-establishment/) | [DIF Claims & Credentials](https://identity.foundation/working-groups/claims-credentials.html) | A means of communicating trust statements and relations between parties in decentralized identity environments. | Pre-Draft |
+| [Decentralized Web Node](https://identity.foundation/decentralized-web-node/spec/) | [DIF Secure Data Storage](https://identity.foundation/working-groups/secure-data-storage.html) | A DWN is a data storage and message relay mechanism entities can use to locate public or private permissioned data related to a given DID. DWNs provide multi-node sync, enabling the owning entity to secure, manage, and transact their data with others without centralizing factors. | Draft |
 
 For brevity, I only included fifteen of the most prominent specifications comprising the foundations of the SSI stack in Web5. There are at least another half dozen either included or planned to be included in our software.
 
