--- a/blog/2022-08-26-ssi-tbd-web5.md
+++ b/blog/2022-08-26-ssi-tbd-web5.md
@@ -63,7 +63,7 @@ Here we’ll lay out the vision for a key component of Web5: Self Sovereign Iden
 
 ### Open Standards
 
-The vision of SSI is realized via [Open Standards](https://en.wikipedia.org/wiki/Open_standard#:~:text=%22Open%20Standards%22%20are%20standards%20made,are%20intended%20for%20widespread%20adoption.). Crucially, these standards are accessible to all: to view and to contribute. You may not be aware of it, but you interact with Open Standards every day: whether via the web browsers, the hardware you use and their underlying protocols, programming languages, audio files, internet and bluetooth devices, text documents, chat applications, encryption you use and so much more. Open Standards facilitate nearly every aspect of modern computation.
+The vision of SSI is realized via [Open Standards](https://en.wikipedia.org/wiki/Open_standard#:~:text=%22Open%20Standards%22%20are%20standards%20made,are%20intended%20for%20widespread%20adoption.). Crucially, these standards are accessible to all: to view and to contribute. You may not be aware of it, but you interact with Open Standards every day: whether via web browsers, hardware you use and their underlying protocols, programming languages, audio files, internet and bluetooth devices, text documents, chat applications, encryption you use and so much more. Open Standards facilitate nearly every aspect of modern computation.
 
 In the SSI space there a number of standards bodies that facilitate SSI-standard development. Though we may utilize specifications in multiple organizations such as the [IETF](https://www.ietf.org/), [OpenID Foundation](https://openid.net/foundation/), the [World Wide Web Consortium (W3C)](https://www.w3.org/), and [Decentralized Identity Foundation (DIF)](https://identity.foundation/). TBD’s focus thus far has been primarily with the W3C and [DIF](http://identity.foundation/) organizations:
 
