meta tags for blog post

--- a/blog/2022-07-01-what-is-web5.md
+++ b/blog/2022-07-01-what-is-web5.md
@@ -10,12 +10,19 @@ tags: [web5]
 
 <head>
   <meta property="og:title" content="What is Web5?" />
+  <meta property="og:type" content="website" />
   <meta property="og:url" content='https://developer.tbd.website/blog/2022-07-01-what-is-web5' />
-  <meta name="twitter:card" content="summary" />
+  <meta name="og:description" content="Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols." />
+  <meta property="og:image" content="/img/what_is_web5.png" /> 
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="twitter:domain" content="developer.tbd.website" />
   <meta name="twitter:site" content="@tbddev" />
   <meta name="twitter:title" content="What is Web5" />
+  <meta property="twitter:url" content='https://developer.tbd.website/blog/2022-07-01-what-is-web5' /> 
   <meta name="twitter:description" content="Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols." />
-  <meta name="twitter:image" content="https://developer.tbd.website/assets/images/what_is_web5.png" />
+  <meta name="twitter:image" content="/img/what_is_web5.png" />
+
   <link rel="apple-touch-icon" href="https://developer.tbd.website/img/tbd-fav-icon-main.png" />
 </head>
 
