--- a/events/index.mdx
+++ b/events/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Check out TBD events'
+title: 'TBD in the wild...'
 ---
 
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
