--- a/events/events/2022-09-21-mainnet22.md
+++ b/events/events/2022-09-21-mainnet22.md
@@ -4,7 +4,7 @@ title: Mainnet Conference 2022
 sidebar_custom_props:
   #type: video
   timeEvent: '2:15pm ET'
-  thumbnail: '/img/mainnet22.png' #size: 2202 x 1242 px
+  thumbnail: '/img/mainnet22-mike.jpg' #size: 2202 x 1242 px
   locationEvent: 'Pier 36, New York, NY'
   #locationLink: ''
   dateEvent: September 22, 2022
@@ -13,6 +13,6 @@ sidebar_custom_props:
 
 ##### September 23, 2022 | 2:15pm ET <br/> Location: Pier 36, New York, NY.
 
-![Mike Brock is speaking at Mainnet 2022](/img/mainnet22.png)
+![Mike Brock is speaking at Mainnet 2022](/img/mainnet22-mike.jpg)
 
 Mike Brock is speaking on **'Can Bitcoiners Buidl Again?'** at [Mainnet 2022](https://mainnet.events/agenda/session/979498).
