--- a/learn/discussions/blockchain-skepticism.mdx
+++ b/learn/discussions/blockchain-skepticism.mdx
@@ -9,6 +9,12 @@ sidebar_custom_props:
   thumbnail: /img/learn/blockchain_skepticism.png
 ---
 
+import {
+  HighlightsEmbedGrid,
+  Audio,
+  BiographyList,
+} from '@site/src/components';
+
 <div className="mb-8">
   <Audio url="https://soundcloud.com/user-625850228/blockchain-skepticism-with" />
 </div>
