--- a/learn/index.mdx
+++ b/learn/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Twitter Spaces: A Blockchain Discussion'
+title: 'Learn Portal'
 ---
 
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
 import { LearnCardList } from '@site/src/components';
 
-A series hosted by [Angie Jones](https://twitter.com/techgirl1908), where the community has open discussions about blockchain technologies and the apps built on top of them.
+Whether you're looking to learn more about TBD projects and components, hear discussions from industry leaders about decentralized technologies, or get your hands dirty with step-by-step tutorials, we have you covered.
 
 <LearnCardList items={useCurrentSidebarCategory().items} />
