updates from Bobbilee

--- a/learn/tutorials/issue-verifiable-credential-manually.mdx
+++ b/learn/tutorials/issue-verifiable-credential-manually.mdx
@@ -47,7 +47,7 @@ Once the process has completed, a new Employment Status VC will be sent to Alice
 
 ## **Steps to Issue a Verifiable Credential**
 
-  1. **[SSI Service Setup](#ssi-service-setup):**
+  1. **[SSI Service Setup](#ssi-service-setup)**
       - Clone & Run SSI Service
       - Create Decentralized Identifier (DID) for Credential Issuer (Acme)
       - Create or obtain DID for Credential Subject (Alice)
@@ -59,7 +59,6 @@ Once the process has completed, a new Employment Status VC will be sent to Alice
 
 ## **SSI Service Setup**
 
-<br/>
 
   **a. Clone and Run SSI Service**
 
@@ -189,7 +188,7 @@ As you can see the DID returned here is using _key_ as its DID method. Learn mor
 Important: Make sure to copy Acme's DID for the next step.
 </blockquote>
 
-<br/><br/>
+<br/>
 
 **c. Create DID for Credential Subject (Alice)**
 
