adding changes suggested by Gabe

--- a/learn/tutorials/issue-verifiable-credential-manually.mdx
+++ b/learn/tutorials/issue-verifiable-credential-manually.mdx
@@ -144,7 +144,6 @@ The following response should be returned:
 ```json
 {
   "did": {
-    "@context": "https://www.w3.org/ns/did/v1",
     //highlight-start
     "id": "did:key:z6MkpEQY4FCCtJEVpZ6gGK541fYWynH2ya7D1RikTGfdydCF",
     //highlight-end
@@ -355,7 +354,9 @@ The following response should be returned:
 }
 ```
 
-
+<blockquote>
+Note: the value for <b>credentialJwt</b> can be decoded using a tool like <a href="jwt.io"><b>jwt.io</b></a>.
+</blockquote>
 
 If Alice has an identity wallet she will be able to store the credential and use it however she wishes.
 
