--- a/learn/tutorials/issue-verifiable-credential-manually.mdx
+++ b/learn/tutorials/issue-verifiable-credential-manually.mdx
@@ -3,7 +3,7 @@ title: Manually Issue a Verifiable Credential
 sidebar_position: 1
 sidebar_custom_props:
   description: 'Learn how to issue a verifiable credential'
-  thumbnail: img/tutorial_issue_vc.png
+  thumbnail: /img/tutorial_issue_vc.png
 ---
 
 <head>
