--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -6,15 +6,15 @@ title: 'APIs'
 import { ApiCard } from '@site/src/components/ApiCard';
 
 <div className=" grid grid-cols-2 gap-4">
-  <ApiCard url="/docs/apis/ssi-sdk" name="SSI SDK - Go" />
+  <ApiCard url="/docs/apis/ssi-sdk" name="SSI Service API" />
   <ApiCard
     url="https://tbd54566975.github.io/dwn-sdk-js/
 "
     name="DWN JavaScript SDK"
   />
   <ApiCard
-    url="https://pkg.go.dev/github.com/tbd54566975/ssi-service
+    url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk
 "
-    name="SSI Service"
+    name="SSI SDK - Go Docs"
   />
 </div>
