--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -6,7 +6,7 @@ title: 'APIs'
 import { ApiCard } from '@site/src/components/ApiCard';
 
 <div className=" grid grid-cols-2 gap-4">
-  <ApiCard url="/docs/apis/ssi-sdk" name="SSI Service API" />
+  <ApiCard url="/docs/apis/ssi-service" name="SSI Service API" />
   <ApiCard
     url="https://tbd54566975.github.io/dwn-sdk-js/
 "
