--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -6,8 +6,12 @@ title: 'APIs'
 import { ApiCard } from '@site/src/components/ApiCard';
 
 <div className=" grid grid-cols-2 gap-4">
-  <ApiCard url="/docs/apis/ssi-service" name="SSI Service API" description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in arcu id libero malesuada imperdiet eu a tortor. Nullam varius vel nibh id rutrum.
-" />
+  <ApiCard
+    url="/docs/apis/ssi-service"
+    name="SSI Service API"
+    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in arcu id libero malesuada imperdiet eu a tortor. Nullam varius vel nibh id rutrum.
+"
+  />
   <ApiCard
     url="https://tbd54566975.github.io/dwn-sdk-js/
 "
