adjust community link

--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -9,17 +9,15 @@ import { ApiCard } from '@site/src/components/ApiCard';
   <ApiCard
     url="/docs/apis/ssi-service"
     name="SSI Service API"
-    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in arcu id libero malesuada imperdiet eu a tortor. Nullam varius vel nibh id rutrum.
-"
+    description="The Self Sovereign Identity Service (SSIS) facilitates all things relating to DIDs and Verifiable Credentials "
   />
   <ApiCard
-    url="https://tbd54566975.github.io/dwn-sdk-js/
-"
+    url="https://tbd54566975.github.io/dwn-sdk-js/"
     name="DWN JavaScript SDK"
   />
   <ApiCard
-    url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk
-"
+    url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk"
     name="SSI SDK - Go Docs"
+    description=" The ssi-sdk intends to provide flexible functionality based on a set of standards-based primitives for building decentralized identity applications in a modular manner: with limited dependencies between components."
   />
 </div>
