--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -81,6 +81,6 @@ Glossary
 - VC: Verifiable Credential
 - DWN: Decentralized Web Node
 
-Community
+### Community Tutorials
 
-- https://frankhinek.com/getting-started-with-tbds-ssi-service/
+- Getting started with TBD's SSI Service: https://frankhinek.com/getting-started-with-tbds-ssi-service/
