add description for DWN

--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -14,6 +14,7 @@ import { ApiCard } from '@site/src/components/ApiCard';
   <ApiCard
     url="https://tbd54566975.github.io/dwn-sdk-js/"
     name="DWN JavaScript SDK"
+    description="A decentralized personal and application data storage and message relay node, as defined in the DIF Decentralized Web Node specification. Users may have multiple Nodes that replicate their data between them."
   />
   <ApiCard
     url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk"
