adjust link to source code and add github logo

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -16,7 +16,14 @@ The web democratized the exchange of information, but it's missing a key layer: 
 
 Web5 brings decentralized identity and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-SOURCE CODE: https://github.com/TBD54566975
+<Link href="https://github.com/TBD54566975">
+  <div className="flex items-center">
+    <span>https://github.com/TBD54566975</span>
+    <span style={{ marginLeft: '12px' }}>
+      <img src="/img/github-icon.svg" alt="github" width="20" height="20" />
+    </span>
+  </div>
+</Link>
 
 ### Platform Components
 
