--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -49,7 +49,7 @@ Web5 brings decentralized identity and data storage to your applications. It let
 
 <div className="grid grid-cols-2 gap-4">
 <Card>
-  <p>Applying for an apartment in web5 manner</p>
+  <p>Applying for an apartment in Web5</p>
 
   <Link href="https://github.com/TBD54566975/ssi-sdk/tree/main/example/usecase/apartment_application">
   Tutorial >
@@ -80,13 +80,6 @@ Web5 brings decentralized identity and data storage to your applications. It let
   <p>Chat App (coming soon)</p>
 </Card>
 </div>
-
-Glossary
-
-- SSI: Self Sovereign Identity
-- DID: Decentralized Identifier
-- VC: Verifiable Credential
-- DWN: Decentralized Web Node
 
 ### Community Tutorials
 
