--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -16,6 +16,8 @@ The web democratized the exchange of information, but it's missing a key layer: 
 
 Web5 brings decentralized identity and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
+[Learn more about Web5](/blog/what-is-web5)
+
 <Link href="https://github.com/TBD54566975">
   <div className="flex items-center">
     <span>https://github.com/TBD54566975</span>
