--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -16,8 +16,6 @@ The web democratized the exchange of information, but it's missing a key layer: 
 
 Web5 brings decentralized identity and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-[Learn more about Web5](/blog/what-is-web5)
-
 <Link href="https://github.com/TBD54566975">
   <div className="flex items-center">
     <span>https://github.com/TBD54566975</span>
@@ -76,6 +74,10 @@ Web5 brings decentralized identity and data storage to your applications. It let
   <Link href="https://github.com/TBD54566975/incubating-web5-labs/tree/main/todo-app">
   Tutorial >
   </Link>
+</Card>
+
+<Card>
+  <p>Chat App (coming soon)</p>
 </Card>
 </div>
 
